# sos-sdp

./: .gitignore  Dockerfile  LICENSE  README.md  REPLACE_ME_WITH_mosek.lic  build.sh  run.sh
examples/book-algorithms/: binary-search.req  karatsuba.req  multcoord.req  qsortO1_1.req  strassen.req
examples/pubs/: arrayreverse.req  cons.req  incr.req  listinverse.req  mergelist.req  power.req  selectord.req
examples/raml/: bitvectors.req  duplicate.req  eratothenes.req  lcs.req  minsort.req  rationalpotential2.req
examples/test/: quadratic.req  quadratic.req.cert.py
sos-sdp/: CMakeLists.txt  main.cpp
sos-sdp/include/: automaitcComplexityEstimator.h  combinatorics.h  debugTools.h  expressionParser.h  hacks.h  program.h  programExpression.h  programParser.h  pythonCodeGen.h  sdpEncoder.h  sdpProblem.h  solver.h  stringRoutines.h  symbolicRing.h  templateEngine.h  testproj.h  tokenizer.h
sos-sdp/src/: exampleMosec.cpp  expressionParser.cpp  programParser.cpp  sdpEncoder.cpp  solver.cpp  stringRoutines.cpp  symbolicRing.cpp  testproj.cpp  tokenizer.cpp
sos-sdp/tests/: symbolicRingTest.cpp  test1.cpp  v0.tmp  v1.tmp
